--- a/Tratel.EndUser/Tratel.EndUser.csproj
+++ b/Tratel.EndUser/Tratel.EndUser.csproj
@@ -3,18 +3,9 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
+    <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BilgeAdam.EF.Common\BilgeAdam.EF.Common.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="frmUpdateProduct.cs">
-      <SubType>Form</SubType>
-    </Compile>
-  </ItemGroup>
 
 </Project>
