--- a/Tratel.Common.Services/Tratel.Common.Services.csproj
+++ b/Tratel.Common.Services/Tratel.Common.Services.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstractions\" />
-    <Folder Include="Concretes\" />
+    <ProjectReference Include="..\Tratel.Contracts\Tratel.Contracts.csproj" />
+    <ProjectReference Include="..\Tratel.Data\Tratel.Data.csproj" />
   </ItemGroup>
 
 </Project>
