--- a/Tratel.EndUser/appSettings.json
+++ b/Tratel.EndUser/appSettings.json
@@ -1,3 +1,3 @@
 {
-  "Local":  "Server=.;Database=TratelDb;User Id=sa;Password=123"
+  "Local":  "Server=localhost,12000;Database=TratelDb;User Id=sa;Password=1q2w3e4R!"
 }
