--- a/Tratel.EndUser/appSettings.Production.json
+++ b/Tratel.EndUser/appSettings.Production.json
@@ -1,5 +1,5 @@
 {
   "Database": {
-    "TratelConnectionString": "Server=localhost,12000;Database=TratelDb;User Id=sa;Password=Bombabomba.com1"
+    "TratelConnectionString": "Server=localhost,12000;Database=TratelDb;User Id=sa;Password=1q2w3e4R!"
   }
 }
