--- a/Tratel.EndUser/Tratel.EndUser.csproj
+++ b/Tratel.EndUser/Tratel.EndUser.csproj
@@ -33,4 +33,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="frmPlaces\frmPlaceList.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
 </Project>
